# symbolic-stack-machines

./: .gitignore  Cargo.toml  README.md
contrib/: Cargo.toml
contrib/src/: lib.rs
contrib/src/constraints/: mod.rs  z3.rs
contrib/src/instructions/: arith.rs  bitwise.rs  misc.rs  mod.rs  sym.rs
contrib/src/instructions/risc/: mod.rs
contrib/src/sym/: mod.rs
contrib/src/sym/value/: arith.rs  int.rs  mod.rs  val.rs
contrib/src/sym/z3/: mod.rs  solver.rs
contrib/tests/: inverted_instructions.rs  simple_lang.rs  simple_langg.rs  solver.rs
contrib/tests/common/: mod.rs
core/: Cargo.toml
core/src/: lib.rs  solver.rs
core/src/constraint/: mod.rs
core/src/environment/: env.rs  mod.rs  record.rs
core/src/instructions/: concrete.rs  error.rs  mod.rs  val.rs
core/src/instructions/impls/: arith.rs  bitwise.rs  mod.rs  sym.rs  sym_helpers.rs
core/src/machine/: abstract.rs  concrete.rs  error.rs  inner_interpreter.rs  mod.rs  outer_interpreter.rs  symbolic.rs  types.rs
core/src/memory/: abstract.rs  concrete_index.rs  config.rs  error.rs  memory.rs  memory_models.rs  mod.rs  record.rs  symbolic.rs  symbolic_bv.rs  val.rs
core/src/solvers/: z3.rs
core/src/stack/: config.rs  error.rs  mod.rs  record.rs  stack.rs  stack_val.rs  val.rs
core/src/vals/: concrete_int.rs  machine_eq.rs
core/src/vals/symbolic_int/: mod.rs  symbolic_int_rv.rs  z3.rs
core/src/value/: abstract.rs  ground.rs  inner.rs  mod.rs  traits.rs  val.rs
core/src/value/ast/: boolean.rs  mod.rs  number.rs  sentence.rs  simple_type.rs  vecc.rs
core/src/value/ast/visitors/: base_interpreter.rs  concrete.rs  mod.rs
core/tests/: simple_lang.rs  simple_lang_concrete.rs  simple_lang_symbolic.rs
src/: concrete_int.rs  lib.rs  machine_eq.rs  symbolic_int.rs
src/instructions/: arith.rs  bitwise.rs  concrete.rs  helpers.rs  hybrid.rs  misc.rs  mod.rs  sym.rs  sym_helpers.rs  symbolic.rs  val.rs
src/instructions/impls/: bitwise.rs  helpers.rs  misc.rs  mod.rs
src/machine/: concrete.rs  mod.rs  symbolic.rs
src/memory/: concrete_index.rs  memory_models.rs  mod.rs  symbolic.rs  symbolic_bv.rs  symbolic_concrete_index.rs  symbolic_index.rs  symbolic_symbolic_index.rs
src/solvers/: mod.rs  z3.rs
src/stack/: mod.rs
src/vals/: concrete_int.rs  mod.rs  symbolic_int.rs  symbolic_int_constraint.rs
src/vals/symbolic_int/: symbolic_int.rs
tests/: simple_lang.rs  simple_lang_concrete.rs  simple_lang_symbolic.rs  xsimple_lang.rs
tests/common/: mod.rs
