[package]
name = "symbolic-stack-machines"
version = "0.1.0"
edition = "2021"
authors = ["Tannr Allard <tannr@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
thiserror = "1.0.30"
z3 = "0.11.2"
