[package]
name = "symbolic-stack-machines"
version = "0.1.0"
edition = "2021"
authors = ["Tannr Allard <tannr@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic-stack-machines-core = {path = "./core", optional = true}
symbolic-stack-machines-contrib = {path = "./contrib", optional = true}

[workspace]
members = ["core", "contrib"]

[features]
core = ["symbolic-stack-machines-core"]
full = ["symbolic-stack-machines-core", "symbolic-stack-machines-contrib"]