[package]
name = "symbolic-stack-machines-contrib"
version = "0.1.0"
edition = "2021"
authors = ["Tannr Allard <tannr@hey.com>", "Will Berman <will@paradigm.xyz>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic-stack-machines-core = {path = "../core"}