[package]
name = "symbolic-stack-machines-contrib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolic-stack-machines-core = {path = "../core"}
z3 = { version = "0.11.2", features = ["static-link-z3"] }