[package]
name = "symbolic-stack-machines-core"
version = "0.1.0"
edition = "2021"
authors = ["Tannr Allard <tannr@hey.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
enum-as-inner = "0.5.0"
hex = "0.4.3"
rand = "0.8.5"
serde = {version = "1.0.136", features = ["derive"], default-features = true}
thiserror = "1.0.30"
z3 = "0.11.2"
